<resources>
    <string name="app_name">SQLI Space Game</string>
    <string name="action_settings">Settings</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="company">Société</string>
    <string name="twitter">Twitter</string>
    <string name="email">Email</string>
    <string name="contact_yes">Contact</string>
    <string name="contact_no">Pas contact</string>
    <string name="launch">Lancer le jeu</string>
</resources>
