<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".player.AddPlayerActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/relativeLayout">

            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:layout_marginTop="@dimen/fab_margin"
                android:inputType="textPersonName"
                android:hint="@string/first_name" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/firstName"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:layout_marginTop="@dimen/fab_margin"
                android:inputType="textPersonName"
                android:hint="@string/last_name" />

            <EditText
                android:id="@+id/company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/lastName"
                android:ems="10"
                android:layout_marginTop="@dimen/fab_margin"
                android:inputType="text"
                android:hint="@string/company" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/company"
                android:ems="10"
                android:layout_marginTop="@dimen/fab_margin"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/twitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:layout_marginTop="@dimen/fab_margin"
                android:inputType="text"
                android:layout_below="@id/email"
                android:hint="@string/twitter" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/twitter"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/fab_margin"
                android:id="@+id/radio_group"
                android:gravity="center_horizontal">
                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:text="@string/male"
                    android:layout_marginEnd="@dimen/fab_margin"
                    />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:text="@string/female" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/radio_group"
                android:layout_marginTop="@dimen/fab_margin"
                android:gravity="center">


                <Button
                    android:id="@+id/launchBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/launch"/>
            </LinearLayout>


        </RelativeLayout>
    </RelativeLayout>


</ScrollView>
